--- a/config/write-manifests.json
+++ b/config/write-manifests.json
@@ -1,3 +1,3 @@
 {
-  "cdnBasePath": "<!-- PATH TO CDN -->"
+  "cdnBasePath": "https://mcdonnell.sharepoint.com/CDN/SiteAssets/mcd79spfx/projectpulse/"
 }
